Add minimal startup profile